# TAFFO-submodule-dta

./: .gitignore  CMakeLists.txt  README.md
TaffoAutotuner/: CMakeLists.txt  FixedPointType.cpp  TaffoTunerPass.cpp  TaffoTunerPass.h
TaffoDTA/: CMakeLists.txt  CPUCosts.cpp  CPUCosts.h  DTAConfig.h  FunctionValuesConstraints.cpp  FunctionValuesConstraints.h  Infos.h  LoopAnalyzerUtil.cpp  MemWatcher.cpp  MetricBase.cpp  MetricBase.h  MetricBaseForward.h  MetricPerf.cpp  MetricPerfInstruction.cpp  Model.cpp  Model.h  Optimizer.cpp  Optimizer.h  OptimizerBinaryInstructions.cpp  OptimizerConstantsHandling.cpp  OptimizerInfo.h  OptimizerInstructionHandling.cpp  PhiWatcher.cpp  TaffoDTA.cpp  TaffoDTA.h  TaffoTunerPass.h
test/: .gdb_history  1  TODO.txt  VRA.txt  a  a.1.magiclangtmp.ll  a.2.magiclangtmp.ll  a.3.magiclangtmp.ll  a.4.magiclangtmp.ll  a.5.magiclangtmp.ll  a.magiclangtmp.s  a.out  array.c  core2_new.json  corr  corr.c  corr.fixp  default.profraw  dummyModel.csv  dummyModel.csv.bak  gesummv.step.txt  i7-4.csv  magiclang2.sh  mix1.c  model_test.py  poly_all.py  poly_core2_4.json  poly_results.json  poly_results_core2_4.json  poly_results_i7.json  poly_results_stm32.json  poly_results_withfloat.json  poly_test.py  poly_test_characterization.py  porting.c  raspberry_for_errors_on_numa.json  raspberry_time.json  raspberry_time_O3.json  result.txt  simple.c  (+4 more)
test/or-tools/: solverTest.py  solver_blanc.py
test/polybench_edited/: instrument.h
test/polybench_edited/2mm/: 2mm.c  2mm_test.py
test/polybench_edited/3mm/: 3mm.c  3mm_test.py
test/polybench_edited/adi/: adi.c  adi.fixp  adi.fixp.magiclangtmp.s  adi.flt  adi_test.py
test/polybench_edited/atax/: atax.c  atax_test.py
test/polybench_edited/bicg/: bicg.c  (+1 more)
test/raspberry/: compile_all.py  generate_single_test.py  poly_all.py  poly_test.py
test/results/: poly_results_core2.json  poly_results_core2_4_O3.json  poly_results_i7.json  poly_results_raspberry_onlyerr.json  poly_results_stm32.json  poly_results_withfloat.json  temp_mini.json
test/time_arit_math/: .gitignore  Makefile  ReadmeTaffo.md  collector.h  dummyModel.csv  time_arit  time_arit.c  time_math  time_math.c
(+84 files in other folders)
